--- a/algorithms/최단거리.md
+++ b/algorithms/최단거리.md
@@ -91,7 +91,38 @@ struct MST{
 
 #### 코드
 
-```
+```c++
+#include <bits/stdc++.h>
+using namespace std;
+using pii = pair<int, int>;
+#define all(x) (x).begin(),(x).end()
+#define sync() {ios_base::sync_with_stdio(0); cin.tie(0);cout.tie(0);} //do not use 
+int n,ans;
+priority_queue<pii, vector<pii>, greater<pii>> pq;
+vector<pii> ed[10003];
+int chk[10003];
+int main()
+{
+ 	int v,e,a,b,c;
+ 	cin>>v>>e;
+ 	for(int i=1;i<=e;i++){
+ 		cin>>a>>b>>c;
+ 		ed[a].push_back({b,c});
+ 		ed[b].push_back({a,c});
+ 	}
+ 	pq.push({0,1});
+ 	while(!pq.empty()){
+ 		tie(c,a) = pq.top(); pq.pop();
+ 		if(chk[a]) continue;
+ 		chk[a]=1;
+ 		ans+=c;
+ 		for(auto [na,nc] : ed[a])if(!chk[na]){
+ 			pq.push({nc,na});
+ 		}
+ 	}
+ 	cout<<ans;
+    return 0;
+}
 
 ```
 
@@ -103,12 +134,87 @@ struct MST{
 
 가장 기본적이고 간단한 알고리즘. 모든 쌍의 노드들에 대한 최단 거리를 구한다. 
 
+```c++
+#include <bits/stdc++.h>
+using namespace std;
+const int inf=1e9;
+int n,m;
+int arr[103][103];
+int main()
+{
+	int i,j,k,a,b,c;
+	cin>>n>>m;
+	for(i=1;i<=n;i++) for(j=i+1;j<=n;j++) arr[i][j]=arr[j][i]=inf;
+	for(i=1;i<=m;i++){
+		cin>>a>>b>>c;
+		arr[a][b]=min(arr[a][b],c);
+	}
+	for(i=1;i<=n;i++){
+		for(j=1;j<=n;j++){
+			for(k=1;k<=n;k++){
+				if(arr[j][k]>arr[j][i]+arr[i][k]) arr[j][k]=arr[j][i]+arr[i][k];
+			}
+		}
+	}
+	for(i=1;i<=n;i++){
+		for(j=1;j<=n;j++){
+			if(arr[i][j]==inf) arr[i][j]=0;
+			cout<<arr[i][j]<<' ';
+		}
+		cout<<'\n';
+	}
+    return 0;
+}
 
+```
 
 ### Dijkstra O(N lg N)
 
 한 노드에서 다른 노드들까지의 최단 거리를 구한다. 우선순위 큐를 이용해 현재정점과 연결된 가장 가중치가 작은 노드를 선택하고 연결된 다른 노드들의 거리를 갱신한다.
 
+https://www.acmicpc.net/problem/1753
+
+```c++
+#include <bits/stdc++.h>
+using namespace std;
+using pii = pair<int, int>;
+const int inf=1e9+3;
+#define all(x) (x).begin(),(x).end()
+#define sync() {ios_base::sync_with_stdio(0); cin.tie(0);cout.tie(0);} //do not use 
+int v,e;
+priority_queue<pii, vector<pii>, greater<pii>> pq;
+vector<pii> ed[20003];
+int dist[20003];
+int main()
+{
+	int i,j,a,b,c,s;
+    cin>>v>>e>>s;
+    for(i=1;i<=e;i++){
+    	cin>>a>>b>>c;
+    	ed[a].push_back({b,c});
+    }
+    fill(dist+1,dist+v+1,inf);
+    dist[s]=0; 
+    pq.push({0,s});
+    while(!pq.empty()){
+    	auto [c,a] = pq.top(); pq.pop();
+    	if(dist[a]<c) continue;
+    	for(auto [b,nc] : ed[a])if(dist[b]>dist[a]+nc){
+    		dist[b]=dist[a]+nc;
+    		pq.push({dist[b],b});
+    	}
+    }
+    for(i=1;i<=v;i++) {
+    	if(dist[i]==inf) cout<<"INF";
+    	else cout<<dist[i];
+    	cout<<"\n";
+    }
+    return 0;
+}
+```
+
+### Bellman-Ford
 
 
-Bellman-Ford
+
+### SPFA(Shortest Path Faster Algorithm)
