--- a/algorithms/최단거리.md
+++ b/algorithms/최단거리.md
@@ -213,8 +213,120 @@ int main()
 }
 ```
 
-### Bellman-Ford
+### Bellman-Ford O(VE)
 
+벨만포드와 다익스트라 모두 $if \space dist[to]>dist[from]+cost, \space then \space dist[to]=dist[from]+cost$라는 식을 이용한다. 벨만포드는 모든 간선에 대해 위 식을 v-1번 검증한다. 이유는 노드가 v개인 간선의 최단 경로는 최대 v-1개의 간선으로 이루어졌기 때문이다. 
 
+벨만포드는 그래프 내에 음수 사이클이 있는지도 찾을 수 있다. 
+위 식을 v번 검증했을 때 v번째에 최단경로가 갱신되면 음수 사이클이 있는 것이다.
 
-### SPFA(Shortest Path Faster Algorithm)
+```c++
+#include <bits/stdc++.h>
+using namespace std;
+using ll = long long;
+const ll inf=1e18+3;
+#define all(x) (x).begin(),(x).end()
+#define sync() {ios_base::sync_with_stdio(0); cin.tie(0);cout.tie(0);} //do not use 
+int n,m;
+vector<array<ll,3>> ed;
+ll d[503];
+int main()
+{
+	ll a,b,c,i;
+    cin>>n>>m;
+    for(i=1;i<=m;i++){
+    	cin>>a>>b>>c;
+    	ed.push_back({a,b,c});
+    }
+    bool improved=true;
+    fill(d+2,d+n+1,inf);
+    for(i=1;i<=n && improved;i++){
+    	improved=false;
+    	for(auto [a,b,c] : ed){
+    		if(d[a]!=inf && d[a]+c<d[b]){
+    			d[b]=d[a]+c;
+    			improved=true;
+    		}
+    	}
+    }
+    if(improved) cout<<"-1";
+    else for(i=2;i<=n;i++){
+    	if(d[i]==inf) d[i]=-1;
+    	cout<<d[i]<<'\n';
+    }
+    return 0;
+}
+
+```
+
+벨만포드 알고리즘을 사용할 때는 오버플로우를 조심하자. 음수사이클이 있을 경우 가중치가 엄청나게 증가(VE배)할 수 있다. 항상 long long을 사용하자. 
+
+### SPFA(Shortest Path Faster Algorithm) avg: O(E), worst : O(VE)
+
+https://www.crocus.co.kr/1089
+
+벨만포드는 모든 간선에 대해 업데이트를 진행, SPFA는 바뀐 정점과 연결된 간선에 대해서만 업데이트를 진행한다. 음수사이클을 확인하는 방법은 한 정점이 n번이상 방문되었는지 체크하는 것이다.
+
+```c++
+#include <bits/stdc++.h>
+using namespace std;
+using ll = long long;
+using pll = pair<ll,ll>;
+const ll inf=1e18+3;
+#define all(x) (x).begin(),(x).end()
+#define sync() {ios_base::sync_with_stdio(0); cin.tie(0);cout.tie(0);} //do not use
+int n,m;
+vector<pll> ed[503];
+int vis[503],chk[503];
+ll dist[503];
+int main()
+{
+	int a,b,c,i,j;
+    cin>>n>>m;
+    for(i=1;i<=m;i++){
+    	cin>>a>>b>>c;
+    	ed[a].push_back({b,c});
+    }
+    for(i=1;i<=n;i++){
+    	sort(all(ed[i]),[&](pll A,pll B){
+    		return A.second<B.second;
+    	});
+    }
+    fill(dist+2,dist+1+n,inf);
+    queue<int> q;
+    q.push(1);
+    while(!q.empty()){
+    	int cur = q.front(); q.pop();
+    	for(auto [nxt,cost] : ed[cur]){
+    		if(dist[nxt]>dist[cur]+cost){
+    			dist[nxt] = dist[cur]+cost;
+    			vis[nxt]++;
+    			if(vis[nxt]>=n){ //음수사이클
+    				cout<<"-1";
+    				return 0;
+    			}
+    			q.push(nxt);
+    		}
+    	}
+    }
+    for(i=2;i<=n;i++){
+    	if(dist[i]==inf) dist[i]=-1;
+    	cout<<dist[i]<<'\n';
+    }
+    return 0;
+}
+
+```
+
+## A* 알고리즘
+
+$f(n) = g(n)+h(n)$
+
+f(n) : 평가 함수
+g(n) : 출발 꼭짓점에서 꼭짓점 n까지의 경로 가중치
+h(n) : 꼭짓점 n으로부터 목표 꼭짓점까지의 추정 경로 가중치
+
+적절한 휴리스틱 함수 h(n)을 만들고 f(n)이 작은 순으로 탐색한다.
+f(n) 다음 상태로 가능한 값들을 다시 우선순위 큐에 넣고 우선순위 큐에서 가장 작은 f(n)을 뽑는 것이 반복된다.
+
+다익스트라 알고리즘과 유사한데 h(n)이 확정된 값이 아니라 휴리스틱으로 추정한 값이라는 것이 다른 점이다.
