--- a/algorithms/네트워크플로우.md
+++ b/algorithms/네트워크플로우.md
@@ -72,6 +72,8 @@ int main()
 
 #### 에드몬드카프 알고리즘 w/ 인접 행렬
 
+flow와 capacity를 나누지 않고 간선의 가중치를 capacity-flow인 잔여용량으로 정의했다. G는 잔여네트워크를 인접행렬로 나타낸 것이다.
+
 ```c++
 #include <bits/stdc++.h>
 using namespace std;
@@ -142,6 +144,8 @@ int main()
 
 #### 에드몬드카프 알고리즘 w/ 인접리스트
 
+https://velog.io/@kasterra/%EC%9C%A0%EB%9F%89-%EA%B7%B8%EB%9E%98%ED%94%84-%EC%97%90%EB%93%9C%EB%AA%AC%EB%93%9C-%EC%B9%B4%ED%94%84-%EC%95%8C%EA%B3%A0%EB%A6%AC%EC%A6%98
+
 ```c++
 #include<bits/stdc++.h>
 using namespace std;
@@ -155,7 +159,7 @@ struct Edge{
     int cf(){return capacity-flow;}
     void push(int amt){
         flow+=amt;
-        rev->capacity+=amt;
+        rev->flow-=amt;
     }
 };
 vector<Edge*> G[2005];
@@ -201,8 +205,6 @@ int maxflow(int s, int t){
 }
 ```
 
-
-
 ## 이분 매칭
 
 이분 그래프에서 매칭의 개수  = {s,L},{R,t}의 flow
@@ -230,6 +232,95 @@ bool dfs(int l){
 
 ## MCMF(Minmum Cost Maximum Flow)
 
+https://www.crocus.co.kr/1090
+
 유량과 비용이 있는 그래프에서 최소비용으로 최대 유량을 구하는 문제
 
-최소 비용 구하기 -> 최단 거리 구하기 -> 벨만포드 / SPFA(비용 음수 가능)
+벨만포드/ SPFA알고리즘으로 구현한다.
+
+SPFA로 구현할 경우 비용이 더 작게 갱신되면 큐에 넣는다. inQ를 이용해 큐에 있는 것을 중복으로 넣지 않게 처리해 성능을 개선한다.
+
+위의 링크에서는 인접행렬에 flow, cost를 저장하되 인접리스트를 이용해 인접한 정점들을 처리해 속도를 향상시켰다. 
+
+에드몬드카프 알고리즘 w/ 인접리스트 코드처럼 edge를 하나하나 정의하지 않아도 대부분의 경우 인접행렬로 처리할 수 있을 것 같다.
+
+포드풀커슨이 $O(|f|E)$에드몬드카프 알고리즘이 $O(E^2V)$이니 시간초과날만한 코드가 아니면 거의 인접행렬을 써도 메모리가 괜찮을 것 같다.
+
+#### MCMF w/인접행렬, 인접리스트
+
+https://www.acmicpc.net/problem/11408
+
+```C++
+#include<bits/stdc++.h>
+using namespace std;
+#define all(x) (x).begin(),(x).end();
+const int inf=1e9;
+int n,m;
+int cf[805][805],d[805][805]; //(i,j)의 잔여용량, cost(distance)
+vector<int> ed[805]; //연결된 노드 인접리스트 
+int S,T;
+int main(){
+    int i,idx,cost,sz;
+    cin>>n>>m;
+    S=n+m+1; T=n+m+2;
+    //그래프 연결 
+    for(i=1;i<=n;i++){
+        cin>>sz;
+        ed[S].push_back(i);
+        ed[i].push_back(S);
+        cf[S][i]=1;
+        while(sz--){
+            cin>>idx>>cost;
+            ed[i].push_back(n+idx);
+            ed[n+idx].push_back(i);
+            d[i][n+idx]=cost;
+            d[n+idx][i]=-cost;
+            cf[i][n+idx]=1;
+        }
+    }
+    for(i=n+1;i<=n+m;i++){
+        cf[i][T]=1;
+        ed[i].push_back(T);
+        ed[T].push_back(i);
+    }
+    
+    int cnt=0,sum=0;
+    while(1){
+        vector<int> prev(805,-1),dist(805,inf);
+        vector<bool> inQ(805,false);
+        queue<int> q;
+        dist[S]=0; inQ[S]=true;
+        q.push(S);
+        while(!q.empty()){ //spfa방식으로 증강경로 구하기
+            int cur = q.front(); q.pop(); inQ[cur] = false; //Q처리
+            for(int nxt : ed[cur]){
+                if(cf[cur][nxt]>0 && dist[nxt]>dist[cur]+d[cur][nxt]){ //잔여용량이 있고 거리가 갱신될 수 있다면 
+                    dist[nxt] = dist[cur]+d[cur][nxt]; //거리 갱신 
+                    prev[nxt] = cur; //전 노드 체크
+                    if(!inQ[nxt]){ //Q중복 삽입 처리
+                        inQ[nxt] = true;
+                        q.push(nxt);
+                    }
+                }
+            }
+        }
+        if(prev[T]==-1) break;
+        int flow = inf;
+        for(i=T;i!=S;i=prev[i]){
+            flow = min(flow,cf[prev[i]][i]);
+        }
+        for(i=T;i!=S;i=prev[i]){
+            cf[prev[i]][i]-=flow;
+            cf[i][prev[i]]+=flow;
+            sum+=flow*d[prev[i]][i]; //flow*(flow당 비용) 
+        }
+        cnt+=flow;
+    }
+    cout<<cnt<<'\n'<<sum;
+    return 0;
+}
+
+```
+
+
+
