--- a/algorithms/세그먼트 트리.md
+++ b/algorithms/세그먼트 트리.md
@@ -1,4 +1,5 @@
 - prefix sum
+- sparse table
 - sqrt decomposition
 - Mo's Algorithm
 
@@ -68,3 +69,33 @@ lazy를 처리하는 함수를 Update_lazy라고 하였다.
 > 1\. 트리 값 갱신
 > 2\. ns!=ne -> Lazy를 아래노드로 전파 (ns와 ne가 다르다는 건 해당노드가 내부노드임을 의미)
 > 3\. 현재노드의 lazy값을 null(영향없는 값)으로 바꾸기
+
+# BIT를 이용한 구현
+
+BIT는 [1,n]구간에 대한 연산을 구할 수 있는 구조이다.  [s,e]가 $[1,n_i]$의 조합으로 나타내어지면 구간에 대한 연산의 결과를 구할 수 있다.
+
+아래 코드는 구간 합 구하기를 푸는 BIT이다. 
+
+## 점 update 범위 query
+
+```C++
+struct BIT{
+    ll t[1000003],n;
+    BIT(ll n):n(n){}
+    void upd(ll x, ll val){for(;x<=n;x+=x&(-x)) t[x]+=val;}
+    ll get(ll x) {ll ret=0; for(;x;x-=x&(-x))ret+=t[x]; return ret;}
+    ll get(ll s, ll e) {return get(e)-get(s-1);}
+};
+```
+
+## 범위 update 점 query
+
+```C++
+struct BIT{
+    ll t[1003];
+    void upd(int s, int e, ll val){upd(e,val); upd(s-1,-val);}
+    void upd(int x, ll val){for(;x;x-=x&-x)t[x]+=val;}
+    ll query(int x){ll ret=0;for(;x<=n;x+=x&-x) ret+=t[x]; return ret;}
+}T;
+```
+
