--- a/algorithms/프로그래밍 실수 모음.md
+++ b/algorithms/프로그래밍 실수 모음.md
@@ -93,6 +93,7 @@
      이럴 경우 케이스를 그 안에서 한 번 더 나누거나 조건식을 수정해야 함.
 2. 불가능한 경우에 -1을 출력해야 하는데 출력 안 함.
 3. 변수를 초기화 안 함
+   구조체를 지역변수로 선언하고 초기화 안 하는 경우 
 4. 테스트 케이스가 여러 개인 경우에는 시작할 때 모든 변수를 초기화하자. 
 5. D[i]와 D[i+1]을 사용하는데 D[i+1]과 같이 다음 것의 인덱스가 없어서 Runtime Error(특히, 벡터 사용시)
 6. 어떤 자료를 원형으로 처리해주어야해서 앞 뒤에 똑같은 내용을 붙여서 처리할 때가 있음. 이 때 배열 인덱스와 같은 경우가 여러번 처리되지 않는지 주의
