--- a/algorithms/프로그래밍 실수 모음.md
+++ b/algorithms/프로그래밍 실수 모음.md
@@ -98,6 +98,8 @@
 5. D[i]와 D[i+1]을 사용하는데 D[i+1]과 같이 다음 것의 인덱스가 없어서 Runtime Error(특히, 벡터 사용시)
 6. 어떤 자료를 원형으로 처리해주어야해서 앞 뒤에 똑같은 내용을 붙여서 처리할 때가 있음. 이 때 배열 인덱스와 같은 경우가 여러번 처리되지 않는지 주의
 7. 부등호(등호가 포함되는지)나 숫자 1정도 차이에 주의하자
+8. (a+b)/2를 할 때 양수의 경우 내림이 되지만 음수의 경우 올림이 된다. 
+   내림처리를 하고 싶으면 음수와 양수를 나누어서 처리하거나 실수로 처리한 후 내림을 해야 한다.
 
 #### <재귀함수>
 
