--- a/algorithms/그래프.md
+++ b/algorithms/그래프.md
@@ -119,6 +119,99 @@ int main()
 
 ```
 
+### 2SAT 문제
+
+$(a_1\vee b_1)\wedge(a_2 \vee b_2) \wedge \cdots (a_n \vee b_n)$이 참이 되게 하는 $x_1,\cdots,x_n$이 있는가?
+$a_i$에는 논리변수($x_1,\cdots,x_n$) 또는 논리변수의 부정($\neg x_1,\cdots, \neg x_2$)가 들어간다.
+
+1. 이 식을 함의 그래프로 나타낸다.
+   각각의 항 ($a_i \vee b_i$)를 $\neg a_i \to b_i$와 $\neg b_i \to a_i$로 나타낸다.
+   (논리변수와 논리변수의 부정은 각각 하나의 노드)
+2. SCC를 구성한다.
+   깊이 우선 탐색 끝나는 순으로 리스트 만들기
+   리스트를 거꾸로 돌며 역그래프 dfs돌리며 그룹만들기
+3. 각각의 컴포넌트를 위상정렬 역순(dfs가 끝나는 순, 리스트 순방향) 으로 돌며 컴포넌트 내의 노드들의 값이 확정되지 않았다면 true로 만든다.
+
+위 방법이 정석인데 간소화하면 
+
+1. 이 식을 함의 그래프로 나타낸다.
+   각각의 항 ($a_i \vee b_i$)를 $\neg a_i \to b_i$와 $\neg b_i \to a_i$로 나타낸다.
+   (논리변수와 논리변수의 부정은 각각 하나의 노드)
+2. SCC를 구성한다.
+   깊이 우선 탐색 끝나는 순으로 리스트 만들기
+   리스트를 거꾸로 돌며 역그래프 dfs돌리며 그룹만들기, 리스트를 돌 때 원소들을 false로 놓기
+   리스트를 순방향으로 돌 때 true로 놓기 때문에 거꾸로 돌 때는 false로 둘 수 있다.
+
+```C++
+#include <bits/stdc++.h>
+using namespace std;
+using pii = pair<int, int>;
+const int inf=1e9+3;
+#define all(x) (x).begin(),(x).end()
+#define sync() {ios_base::sync_with_stdio(0); cin.tie(0);cout.tie(0);}
+int n,m,chk[20003],gr[20030],ans[20003];
+vector<int> ed[20003],red[20003];
+stack<int> st;
+inline int no(int num){
+    if(num<=n) return num+n;
+    return num-n;
+}
+void dfs(int num){
+    chk[num]=1;
+    for(int nxt : ed[num])if(!chk[nxt]){
+        dfs(nxt);
+    }
+    st.push(num);
+    return;
+}
+void rdfs(int num, int rep){
+    chk[num]=0;
+    gr[num]=rep;
+    if(!ans[num] && !ans[no(num)]) ans[no(num)]=1;
+    for(int nxt : red[num])if(chk[nxt]){
+        rdfs(nxt,rep);
+    }
+    return;
+}
+void kosaraju(){
+    //1. dfs가 끝나는 순으로 리스트를 만든다.
+    //2. 리스트 역순으로 그룹을 만든다. 등장하는 노드를 false로 체크한다.
+    int i,tp;
+    for(i=1;i<=2*n;i++) if(!chk[i]) dfs(i);
+    while(!st.empty()){
+        tp = st.top(); st.pop();
+        if(chk[tp]) rdfs(tp,tp);
+    }
+    return;
+}
+int main()
+{
+    int i,a,b;
+    sync()
+    cin>>n>>m;
+    for(i=1;i<=m;i++){
+        cin>>a>>b;
+        if(a<0) a=-a+n;
+        if(b<0) b=-b+n;
+        ed[no(a)].push_back(b);
+        ed[no(b)].push_back(a);
+        red[b].push_back(no(a));
+        red[a].push_back(no(b));
+    }
+    kosaraju();
+    int flag=1;
+    for(i=1;i<=n;i++) if(gr[i]==gr[i+n]) flag=0;
+    cout<<flag<<'\n';
+    if(flag){
+        for(i=1;i<=n;i++) cout<<ans[i]<<' ';
+    }
+    return 0;
+}
+
+```
+
+
+
 ## 오일러 회로
 
 http://www.secmem.org/blog/2021/04/14/Euler-Circuit-and-Path/
