--- a/algorithms/세그먼트 트리.md
+++ b/algorithms/세그먼트 트리.md
@@ -99,3 +99,15 @@ struct BIT{
 }T;
 ```
 
+ 
+
+## 점 update 범위 query -> 범위 update 점 query 수행하기
+
+diff[1]=arr[1]
+diff[i]=arr[i]-arr[i-1] (i>=2)
+이렇게 diff배열을 만들자.
+
+$arr_n=\sum^n_{i=1} diff_i$이기 때문에 범위 query를 이용하여 점 query를 수행할 수 있다.
+[a,b]범위에 c만큼 더해줄 때는 diff[a]에 c만큼 더해주고 diff[c+1]에 c만큼 빼주면 된다.
+
+https://github.com/irresi/Algostudy/blob/main/acmicpcnet/16975_2.cpp
