--- a/algorithms/프로그래밍 실수 모음.md
+++ b/algorithms/프로그래밍 실수 모음.md
@@ -14,19 +14,13 @@
 #### <배열>
 
 1. 배열의 범위를 잘못 지정함
-
 2. 배열의 행과 열을 바꿔서 지정
-
 3. 배열의 음수 범위를 참조 및 갱신
-4.  배열을 0번부터 받아야 하는데 1번부터 받음
-
+4. 배열을 0번부터 받아야 하는데 1번부터 받음
 5. 배열을 넉넉히 잡자
-
 6. 순환하는 것을 처리하려고 앞 뒤로 3배를 늘렸는데 배열 인덱스 3배로 안 늘림.
-
 7. 세그먼트 트리를 할 때는 배열을 원소의 4배 + 상수로 잡자
-
- 
+7. 배열 이름에 주의하자. 조건문이나 반복문 등의 식이 여러 번 반복될 때 잘못 쓰여 있는 것이 있을 수 있다.
 
 #### <변수>
 
