--- a/algorithms/트리.md
+++ b/algorithms/트리.md
@@ -2,6 +2,13 @@
 
 ## LCA(n lg n)
 
+sparse table을 이용하는 방법
+각각의 노드를 두 개의 포인터가 가리키게 한다.
+
+1. 포인터가 가리키는 노드가 트리에서 같은 높이에 있게 한다.
+2. 두 포인터가 같은 노드를 가리키지 않게 높이를 최대한 올려준다.
+3. 두 포인터의 부모노드가 LCA다.
+
 ```c++
 #include <bits/stdc++.h>
 using namespace std;
@@ -47,4 +54,15 @@ int main()
 }
 
 ```
+
+Euler tree를 이용하는 방법
+
+깊이 우선 탐색으로 모든 노드를 방문하되, 노드를 지나는 모든 순간마다 노드를 배열에 추가한다.
+자식이 k개인 노드는 처음에 방문할 때, 자식노드의 방문을 마친 후 방문하므로 k+1번 방문한다.
+따라서 이 오일러 트리의 크기는 2n-1이 된다.
+
+오일러 트리에는 노드 번호와 깊이를 위의 방문 순서대로 저장한다.
+노드 번호 a와 b의 LCA를 찾으려면 오일러 트리에서 노드번호 a~b에 있는 깊이가 가장 작은 노드 번호를 출력하면 된다. 세그먼트 트리나 인덱스 트리, sparse table 등을 통해 LCA를 구할 수 있다.
+
+https://github.com/irresi/Algostudy/blob/main/acmicpcnet/3584_1.cpp
 
