--- a/algorithms/프로그래밍 실수 모음.md
+++ b/algorithms/프로그래밍 실수 모음.md
@@ -43,8 +43,9 @@
 #### <자료형>
 
 1. **Long Long을 써야 하는데 int를 씀(int 범위 초과)**
-
- 
+2. floor와 ceil
+   double a=(double)b/c; floor(a) 보다
+   floor((double)b/c)가 더 정확하다. floor와 ceil은 함수가 아니라 매크로이기 때문에
 
 #### <출력>
 
