--- a/algorithms/정수론.md
+++ b/algorithms/정수론.md
@@ -95,5 +95,50 @@ $X_k = \frac{m_1m_2\cdots m_n}{m_k}$
 역원은 오일러 정리 $x^{\phi(m)} mod \space m \equiv 1$ 을 분할정복을 이용하여 log시간에 구하면 된다.
 나머지들의 곱이 너무 큰 경우에는 이 방법으로 해결하기 어렵다.
 
- 
+###  카탈란 수
+
+$C_n$ : 여는 괄호 n개, 닫는 괄호 n개로 구성된 올바른 문자열의 수 
+
+정의
+
+- 빈 문자열은 올바른 괄호 문자열이다.
+- A와 B가 올바른 문자열이면 AB도 올바른 문자열이다.
+- A가 올바른 문자열이면 (A)도 올바른 문자열이다.
+
+성질
+
+- [1,k] 에 대해 여는 괄호 >= 닫는 괄호 
+
+공식
+
+$C_n = \sum_{i=0}^{n-1}C_iC_{n-i-1}$
+
+$C_n= \frac{1}{n+1}\binom{2n}{n}$
+
+예시
+
+노드 n개로 구성된 이진트리 개수 : (왼쪽노드) 오른쪽 노드로 놓으면 올바른 괄호 문제로 바꿀 수 있다.
+
+노드 n+1개로 이루어진 루트트리 개수 : 노드를 방문할 때 '(', 모든 자식 노드를 방문하고 나갈 때 ')'를 사용하여 문자열을 만들면 올바른 괄호 문제이다.(이 때, 루트노드는 방문할 때 괄호처리 안 함)
+
+### 교란 순열
+
+어떤 값도 그 값이 나타내는 한 위치에 있지 않은 경우
+
+경우의 수 공식
+
+![CodeCogsEqn (4)](D:\Download 다운로드\CodeCogsEqn (4).gif)
+
+### 번사이드 보조정리
+
+: 서로 다른 조합의 개수를 셀 때 대칭인 경우를 한 번만 세야 하는 경우에 사용할 수 있는 정리
+
+조합의 개수 : $\frac{1}{n}\sum^n_{k=0} c(k)$
+
+진주색이 m개 일 때 n개의 진주로 이루어진 목걸이를 만드는 경우의 수 구하기
+
+https://www.acmicpc.net/problem/6567
+
+k번 회전했을 때 모양이 바뀌지 않는 목걸이는 $m^{gcd(k,n)}$개 
+서로 다른 목걸이의 개수 : $\frac{1}{n}\sum^{n-1}_{k=0} m^{gcd(k,n)}$
 
