--- a/algorithms/프로그래밍 실수 모음.md
+++ b/algorithms/프로그래밍 실수 모음.md
@@ -95,6 +95,8 @@
 7. 부등호(등호가 포함되는지)나 숫자 1정도 차이에 주의하자
 8. (a+b)/2를 할 때 양수의 경우 내림이 되지만 음수의 경우 올림이 된다. 
    내림처리를 하고 싶으면 음수와 양수를 나누어서 처리하거나 실수로 처리한 후 내림을 해야 한다.
+9. 같은 자료가 여러 번 등장할 수 있는 지 확인한다.
+   ex) 정렬 이용하는 문제, 좌표(sweeping) 
 
 #### <재귀함수>
 
