--- a/algorithms/네트워크플로우.md
+++ b/algorithms/네트워크플로우.md
@@ -234,7 +234,7 @@ bool dfs(int l){
 
 https://www.crocus.co.kr/1090
 
-유량과 비용이 있는 그래프에서 최소비용으로 최대 유량을 구하는 문제
+유량과 비용이 있는 그래프에서 최대 유량일 때 비용을 최소화하는 문제
 
 벨만포드/ SPFA알고리즘으로 구현한다.
 
@@ -322,5 +322,7 @@ int main(){
 
 ```
 
-
+1. 코스트가 가장 적은 증강경로 구하기
+2. 그 증강경로의 flow구하고 경로에 갱신
+3. 총 유량과 비용 갱신
 
